--- a/plugin.xml
+++ b/plugin.xml
@@ -1,34 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
+  xmlns:android="http://schemas.android.com/apk/res/android"
   id="com.vladstirbu.cordova.instagram"
   version="0.2.1">
   
   <name>Instagram</name>
   
-  <engines>
-    <engine name="cordova" version=">=1.8.1" />
-  </engines>
-  
-  <asset src="www/CDVInstagramPlugin.js" target="CDVInstagramPlugin.js" />
-  
-  <platform name="android">
-    
-    <!-- android specific elements -->
-    <config-file target="res/xml/config.xml" parent="/cordova/plugins">
-      <plugin name="Instagram" value="com.vladstirbu.cordova.CDVInstagramPlugin" />
-    </config-file>
-    
-    <config-file target="res/xml/plugins.xml" parent="/plugins">
-      <plugin name="Instagram" value="com.vladstirbu.cordova.CDVInstagramPlugin" />
-    </config-file>
-    
-    <source-file src="src/android/CDVInstagramPlugin.java" target-dir="src/com/vladstirbu/cordova" />
-  </platform>
+  <asset src="www/CDVInstagramPlugin.js" target="js/CDVInstagramPlugin.js" />
   
   <platform name="ios">
     <!-- ios specific elements -->
-    <plugins-plist key="Instagram" string="CDVInstagramPlugin" />
-    
-    <source-file src="CDVInstagramPlugin.h" />
-    <source-file src="CDVInstagramPlugin.m" />
+    <config-file target="config.xml" parent="plugins">
+      <plugin name="InstagramPlugin" value="CDVInstagramPlugin" />
+    </config-file>
+
+    <header-file src="src/ios/CDVInstagramPlugin.h" target-dir="CDVInstagramPlugin" />
+    <source-file src="src/ios/CDVInstagramPlugin.m" target-dir="CDVInstagramPlugin" />
   </platform>
 </plugin>
