--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,18 @@
       <engine name="cordova" version=">=3.0.0" />
   </engines>
   
+  <!-- android -->
+  <platform name="android">
+    <!-- android specific elements -->
+    <config-file target="res/xml/config.xml" parent="/cordova/plugins">
+      <feature name="Instagram">
+        <param name="android-package" value="com.vladstirbu.cordova.CDVInstagramPlugin" />
+       </feature>
+    </config-file>
+    
+    <source-file src="src/android/CDVInstagramPlugin.java" target-dir="src/com/vladstirbu/cordova" />
+  </platform>
+  
   <!-- ios -->
   <platform name="ios">
     <!-- ios specific elements -->
