--- a/plugin.xml
+++ b/plugin.xml
@@ -6,6 +6,8 @@
   
   <name>Instagram</name>
 
+  <description>Share the content of a canvas element or a dataUrl encoded image using the Instagram application for iOS and Android.</description>
+
   <js-module src="www/CDVInstagramPlugin.js" name="InstagramPlugin">
         <clobbers target="Instagram" />
   </js-module>
