--- a/plugin.xml
+++ b/plugin.xml
@@ -2,11 +2,13 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
   id="com.vladstirbu.cordova.instagram"
-  version="0.2.3">
+  version="0.2.4">
   
   <name>Instagram</name>
 
   <description>Share the content of a canvas element or a dataUrl encoded image using the Instagram application for iOS and Android.</description>
+
+  <license>MIT</license>
 
   <js-module src="www/CDVInstagramPlugin.js" name="InstagramPlugin">
         <clobbers target="Instagram" />
