--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  id="com.vladstirbu.cordova.instagram"
+  id="cordova-instagram-plugin"
   version="0.4.1">
 
   <name>Instagram</name>
