--- a/plugin.xml
+++ b/plugin.xml
@@ -2,13 +2,18 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
   id="cordova-instagram-plugin"
-  version="0.4.1">
+  version="0.5.0">
 
   <name>Instagram</name>
 
   <description>Share the content of a canvas element or a dataUrl encoded image using the Instagram application for iOS and Android.</description>
 
   <license>MIT</license>
+
+  <dependency
+    id="com.verso.cordova.clipboard"
+    url="https://github.com/VersoSolutions/CordovaClipboard.git">
+  </dependency>
 
   <js-module src="www/CDVInstagramPlugin.js" name="InstagramPlugin">
         <clobbers target="Instagram" />
