fixed Android Oreo FileProvider issue

--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
   id="cordova-instagram-plugin"
-  version="0.5.5">
+  version="0.5.6">
 
   <name>Instagram</name>
 
@@ -25,12 +25,25 @@
 
   <!-- android -->
   <platform name="android">
+    <framework src="com.android.support:support-v4:26.+" />
+
     <!-- android specific elements -->
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="Instagram">
         <param name="android-package" value="com.vladstirbu.cordova.CDVInstagramPlugin" />
        </feature>
     </config-file>
+
+    <config-file target="AndroidManifest.xml" parent="/manifest/application">
+        <provider android:authorities="${applicationId}.provider" android:exported="false" android:grantUriPermissions="true" android:name="com.vladstirbu.cordova.plugin.utils.AssetProvider">
+          <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/instagramplugin_provider_paths" />
+        </provider>
+    </config-file>
+
+    <source-file
+            src="src/android/xml/instagramplugin_provider_paths.xml"
+            target-dir="res/xml" />
+
 
     <source-file src="src/android/CDVInstagramPlugin.java" target-dir="src/com/vladstirbu/cordova" />
   </platform>
