--- a/plugin.xml
+++ b/plugin.xml
@@ -46,6 +46,7 @@
 
 
     <source-file src="src/android/CDVInstagramPlugin.java" target-dir="src/com/vladstirbu/cordova" />
+    <source-file src="src/android/utils/AssetProvider.java" target-dir="src/com/vladstirbu/cordova" />
   </platform>
 
   <!-- ios -->
