add back cordova plugin copy clipboard

--- a/plugin.xml
+++ b/plugin.xml
@@ -10,6 +10,11 @@
 
   <license>MIT</license>
 
+  <dependency
+    id="cordova-universal-clipboard"
+    url="https://github.com/Visigo/CordovaClipboard.git">
+  </dependency>
+
   <js-module src="www/CDVInstagramPlugin.js" name="InstagramPlugin">
         <clobbers target="Instagram" />
   </js-module>
